[project]
name = "aoc"
version = "0.1.0"
description = "My solutions for Advent of Code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerberus~=1.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "regex==2025.10.22",
    "types-dataclasses~=0.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "A", "PLC", "PLE", "PLW", "I"]
ignore = ["PLW0603", "PLW2901"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241126",
    "ruff>=0.8.2",
    "types-networkx>=3.4.2.20241115",
]
