[project]
name = "aoc"
version = "0.1.0"
description = "My solutions for Advent of Code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerberus~=1.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "regex==2025.11.3",
    "types-dataclasses~=0.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "A", "PLC", "PLE", "PLW", "I"]
ignore = ["PLW0603", "PLW2901"]

[tool.ty.environment]
python-version = "3.12"

# Default rules (strict) - will apply to 2025 and future years
# All rules are errors by default

# Override rules for legacy years (2020, 2021, 2024)
[[tool.ty.overrides]]
include = ["2020/**", "2021/**", "2024/**"]

[tool.ty.overrides.rules]
too-many-positional-arguments = "warn"
unknown-argument = "warn"
invalid-argument-type = "warn"
invalid-method-override = "warn"
invalid-assignment = "warn"

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.241126",
    "ruff>=0.8.2",
    "ty==0.0.1a29",
    "types-networkx>=3.4.2.20241115",
]
